apache_mod_php4/php/Zend/zend_language_parser.output
Terminals which are not used

   T_COMMENT
   T_ML_COMMENT
   T_OPEN_TAG
   T_OPEN_TAG_WITH_ECHO
   T_CLOSE_TAG
   T_WHITESPACE


State 253 conflicts: 2 shift/reduce
State 544 conflicts: 2 shift/reduce


Grammar

    0 $accept: start $end

    1 start: top_statement_list

    2 @1: /* empty */

    3 top_statement_list: top_statement_list @1 top_statement
    4                   | /* empty */

    5 top_statement: statement
    6              | declaration_statement

    7 @2: /* empty */

    8 inner_statement_list: inner_statement_list @2 inner_statement
    9                     | /* empty */

   10 inner_statement: statement
   11                | declaration_statement

   12 statement: unticked_statement

   13 unticked_statement: '{' inner_statement_list '}'

   14 @3: /* empty */

   15 @4: /* empty */

   16 unticked_statement: T_IF '(' expr ')' @3 statement @4 elseif_list else_single

   17 @5: /* empty */

   18 @6: /* empty */

   19 unticked_statement: T_IF '(' expr ')' ':' @5 inner_statement_list @6 new_elseif_list new_else_single T_ENDIF ';'

   20 @7: /* empty */

   21 @8: /* empty */

   22 unticked_statement: T_WHILE '(' @7 expr ')' @8 while_statement

   23 @9: /* empty */

   24 @10: /* empty */

   25 unticked_statement: T_DO @9 statement T_WHILE '(' @10 expr ')' ';'

   26 @11: /* empty */

   27 @12: /* empty */

   28 @13: /* empty */

   29 unticked_statement: T_FOR '(' for_expr ';' @11 for_expr ';' @12 for_expr ')' @13 for_statement

   30 @14: /* empty */

   31 unticked_statement: T_SWITCH '(' expr ')' @14 switch_case_list
   32                   | T_BREAK ';'
   33                   | T_BREAK expr ';'
   34                   | T_CONTINUE ';'
   35                   | T_CONTINUE expr ';'
   36                   | T_RETURN ';'
   37                   | T_RETURN expr_without_variable ';'
   38                   | T_RETURN cvar ';'
   39                   | T_GLOBAL global_var_list ';'
   40                   | T_STATIC static_var_list ';'
   41                   | T_ECHO echo_expr_list ';'
   42                   | T_INLINE_HTML
   43                   | expr ';'
   44                   | T_USE use_filename ';'
   45                   | T_UNSET '(' unset_variables ')' ';'

   46 @15: /* empty */

   47 @16: /* empty */

   48 unticked_statement: T_FOREACH '(' w_cvar T_AS @15 w_cvar foreach_optional_arg ')' @16 foreach_statement

   49 @17: /* empty */

   50 @18: /* empty */

   51 unticked_statement: T_FOREACH '(' expr_without_variable T_AS @17 w_cvar foreach_optional_arg ')' @18 foreach_statement

   52 @19: /* empty */

   53 unticked_statement: T_DECLARE @19 '(' declare_list ')' declare_statement
   54                   | ';'

   55 unset_variables: unset_variable
   56                | unset_variables ',' unset_variable

   57 unset_variable: cvar

   58 use_filename: T_CONSTANT_ENCAPSED_STRING
   59             | '(' T_CONSTANT_ENCAPSED_STRING ')'

   60 declaration_statement: unticked_declaration_statement

   61 @20: /* empty */

   62 @21: /* empty */

   63 unticked_declaration_statement: T_FUNCTION @20 is_reference T_STRING @21 '(' parameter_list ')' '{' inner_statement_list '}'

   64 @22: /* empty */

   65 @23: /* empty */

   66 unticked_declaration_statement: T_OLD_FUNCTION @22 is_reference T_STRING @23 parameter_list '(' inner_statement_list ')' ';'

   67 @24: /* empty */

   68 unticked_declaration_statement: T_CLASS T_STRING @24 '{' class_statement_list '}'

   69 @25: /* empty */

   70 unticked_declaration_statement: T_CLASS T_STRING T_EXTENDS T_STRING @25 '{' class_statement_list '}'

   71 foreach_optional_arg: /* empty */
   72                     | T_DOUBLE_ARROW w_cvar

   73 for_statement: statement
   74              | ':' inner_statement_list T_ENDFOR ';'

   75 foreach_statement: statement
   76                  | ':' inner_statement_list T_ENDFOREACH ';'

   77 declare_statement: statement
   78                  | ':' inner_statement_list T_ENDDECLARE ';'

   79 declare_list: T_STRING '=' static_scalar
   80             | declare_list ',' T_STRING '=' static_scalar

   81 switch_case_list: '{' case_list '}'
   82                 | '{' ';' case_list '}'
   83                 | ':' case_list T_ENDSWITCH ';'
   84                 | ':' ';' case_list T_ENDSWITCH ';'

   85 case_list: /* empty */

   86 @26: /* empty */

   87 case_list: case_list T_CASE expr case_separator @26 inner_statement_list

   88 @27: /* empty */

   89 case_list: case_list T_DEFAULT case_separator @27 inner_statement_list

   90 case_separator: ':'
   91               | ';'

   92 while_statement: statement
   93                | ':' inner_statement_list T_ENDWHILE ';'

   94 elseif_list: /* empty */

   95 @28: /* empty */

   96 elseif_list: elseif_list T_ELSEIF '(' expr ')' @28 statement

   97 new_elseif_list: /* empty */

   98 @29: /* empty */

   99 new_elseif_list: new_elseif_list T_ELSEIF '(' expr ')' ':' @29 inner_statement_list

  100 else_single: /* empty */
  101            | T_ELSE statement

  102 new_else_single: /* empty */
  103                | T_ELSE ':' inner_statement_list

  104 parameter_list: non_empty_parameter_list
  105               | /* empty */

  106 non_empty_parameter_list: T_VARIABLE
  107                         | '&' T_VARIABLE
  108                         | T_CONST T_VARIABLE
  109                         | T_VARIABLE '=' static_scalar
  110                         | non_empty_parameter_list ',' T_VARIABLE
  111                         | non_empty_parameter_list ',' '&' T_VARIABLE
  112                         | non_empty_parameter_list ',' T_CONST T_VARIABLE
  113                         | non_empty_parameter_list ',' T_VARIABLE '=' static_scalar

  114 function_call_parameter_list: non_empty_function_call_parameter_list
  115                             | /* empty */

  116 non_empty_function_call_parameter_list: expr_without_variable
  117                                       | cvar
  118                                       | '&' w_cvar
  119                                       | non_empty_function_call_parameter_list ',' expr_without_variable
  120                                       | non_empty_function_call_parameter_list ',' cvar
  121                                       | non_empty_function_call_parameter_list ',' '&' w_cvar

  122 global_var_list: global_var_list ',' global_var
  123                | global_var

  124 global_var: T_VARIABLE
  125           | '$' r_cvar
  126           | '$' '{' expr '}'

  127 static_var_list: static_var_list ',' T_VARIABLE
  128                | static_var_list ',' T_VARIABLE '=' static_scalar
  129                | T_VARIABLE
  130                | T_VARIABLE '=' static_scalar

  131 class_statement_list: class_statement_list class_statement
  132                     | /* empty */

  133 class_statement: T_VAR class_variable_decleration ';'

  134 @30: /* empty */

  135 @31: /* empty */

  136 class_statement: T_FUNCTION @30 is_reference T_STRING @31 '(' parameter_list ')' '{' inner_statement_list '}'

  137 @32: /* empty */

  138 @33: /* empty */

  139 class_statement: T_OLD_FUNCTION @32 is_reference T_STRING @33 parameter_list '(' inner_statement_list ')' ';'

  140 is_reference: /* empty */
  141             | '&'

  142 class_variable_decleration: class_variable_decleration ',' T_VARIABLE
  143                           | class_variable_decleration ',' T_VARIABLE '=' static_scalar
  144                           | T_VARIABLE
  145                           | T_VARIABLE '=' static_scalar

  146 echo_expr_list: /* empty */
  147               | echo_expr_list ',' expr
  148               | expr

  149 for_expr: /* empty */
  150         | non_empty_for_expr

  151 @34: /* empty */

  152 non_empty_for_expr: non_empty_for_expr ',' @34 expr
  153                   | expr

  154 @35: /* empty */

  155 expr_without_variable: T_LIST '(' @35 assignment_list ')' '=' expr
  156                      | cvar '=' expr
  157                      | cvar '=' '&' w_cvar
  158                      | cvar '=' '&' function_call

  159 @36: /* empty */

  160 expr_without_variable: cvar '=' '&' T_NEW static_or_variable_string @36 ctor_arguments

  161 @37: /* empty */

  162 expr_without_variable: T_NEW static_or_variable_string @37 ctor_arguments
  163                      | cvar T_PLUS_EQUAL expr
  164                      | cvar T_MINUS_EQUAL expr
  165                      | cvar T_MUL_EQUAL expr
  166                      | cvar T_DIV_EQUAL expr
  167                      | cvar T_CONCAT_EQUAL expr
  168                      | cvar T_MOD_EQUAL expr
  169                      | cvar T_AND_EQUAL expr
  170                      | cvar T_OR_EQUAL expr
  171                      | cvar T_XOR_EQUAL expr
  172                      | cvar T_SL_EQUAL expr
  173                      | cvar T_SR_EQUAL expr
  174                      | rw_cvar T_INC
  175                      | T_INC rw_cvar
  176                      | rw_cvar T_DEC
  177                      | T_DEC rw_cvar

  178 @38: /* empty */

  179 expr_without_variable: expr T_BOOLEAN_OR @38 expr

  180 @39: /* empty */

  181 expr_without_variable: expr T_BOOLEAN_AND @39 expr

  182 @40: /* empty */

  183 expr_without_variable: expr T_LOGICAL_OR @40 expr

  184 @41: /* empty */

  185 expr_without_variable: expr T_LOGICAL_AND @41 expr
  186                      | expr T_LOGICAL_XOR expr
  187                      | expr '|' expr
  188                      | expr '&' expr
  189                      | expr '^' expr
  190                      | expr '.' expr
  191                      | expr '+' expr
  192                      | expr '-' expr
  193                      | expr '*' expr
  194                      | expr '/' expr
  195                      | expr '%' expr
  196                      | expr T_SL expr
  197                      | expr T_SR expr
  198                      | '+' expr
  199                      | '-' expr
  200                      | '!' expr
  201                      | '~' expr
  202                      | expr T_IS_IDENTICAL expr
  203                      | expr T_IS_NOT_IDENTICAL expr
  204                      | expr T_IS_EQUAL expr
  205                      | expr T_IS_NOT_EQUAL expr
  206                      | expr '<' expr
  207                      | expr T_IS_SMALLER_OR_EQUAL expr
  208                      | expr '>' expr
  209                      | expr T_IS_GREATER_OR_EQUAL expr
  210                      | '(' expr ')'

  211 @42: /* empty */

  212 @43: /* empty */

  213 expr_without_variable: expr '?' @42 expr ':' @43 expr
  214                      | function_call
  215                      | internal_functions_in_yacc
  216                      | T_INT_CAST expr
  217                      | T_DOUBLE_CAST expr
  218                      | T_STRING_CAST expr
  219                      | T_ARRAY_CAST expr
  220                      | T_OBJECT_CAST expr
  221                      | T_BOOL_CAST expr
  222                      | T_UNSET_CAST expr
  223                      | T_EXIT exit_expr

  224 @44: /* empty */

  225 expr_without_variable: '@' @44 expr
  226                      | scalar
  227                      | T_ARRAY '(' array_pair_list ')'
  228                      | '`' encaps_list '`'
  229                      | T_PRINT expr

  230 @45: /* empty */

  231 function_call: T_STRING '(' @45 function_call_parameter_list ')'

  232 @46: /* empty */

  233 function_call: cvar '(' @46 function_call_parameter_list ')'

  234 @47: /* empty */

  235 function_call: T_STRING T_PAAMAYIM_NEKUDOTAYIM static_or_variable_string '(' @47 function_call_parameter_list ')'

  236 static_or_variable_string: T_STRING
  237                          | r_cvar

  238 exit_expr: /* empty */
  239          | '(' ')'
  240          | '(' expr ')'

  241 ctor_arguments: /* empty */
  242               | '(' function_call_parameter_list ')'

  243 common_scalar: T_LNUMBER
  244              | T_DNUMBER
  245              | T_CONSTANT_ENCAPSED_STRING
  246              | T_LINE
  247              | T_FILE
  248              | T_CLASS_C
  249              | T_FUNC_C

  250 static_scalar: common_scalar
  251              | T_STRING
  252              | '+' static_scalar
  253              | '-' static_scalar
  254              | T_ARRAY '(' static_array_pair_list ')'

  255 scalar: T_STRING
  256       | T_STRING_VARNAME
  257       | common_scalar
  258       | '"' encaps_list '"'
  259       | ''' encaps_list '''
  260       | T_START_HEREDOC encaps_list T_END_HEREDOC

  261 static_array_pair_list: /* empty */
  262                       | non_empty_static_array_pair_list possible_comma

  263 possible_comma: /* empty */
  264               | ','

  265 non_empty_static_array_pair_list: non_empty_static_array_pair_list ',' static_scalar T_DOUBLE_ARROW static_scalar
  266                                 | non_empty_static_array_pair_list ',' static_scalar
  267                                 | static_scalar T_DOUBLE_ARROW static_scalar
  268                                 | static_scalar

  269 expr: r_cvar
  270     | expr_without_variable

  271 r_cvar: cvar

  272 w_cvar: cvar

  273 rw_cvar: cvar

  274 cvar: cvar_without_objects

  275 @48: /* empty */

  276 cvar: cvar_without_objects T_OBJECT_OPERATOR @48 ref_list

  277 cvar_without_objects: reference_variable
  278                     | simple_indirect_reference reference_variable

  279 reference_variable: reference_variable '[' dim_offset ']'
  280                   | reference_variable '{' expr '}'
  281                   | compound_variable

  282 compound_variable: T_VARIABLE
  283                  | '$' '{' expr '}'

  284 dim_offset: /* empty */
  285           | expr

  286 ref_list: object_property

  287 @49: /* empty */

  288 ref_list: ref_list T_OBJECT_OPERATOR @49 object_property

  289 object_property: object_dim_list

  290 @50: /* empty */

  291 object_property: cvar_without_objects @50

  292 object_dim_list: object_dim_list '[' dim_offset ']'
  293                | object_dim_list '{' expr '}'
  294                | variable_name

  295 variable_name: T_STRING
  296              | '{' expr '}'

  297 simple_indirect_reference: '$'
  298                          | simple_indirect_reference '$'

  299 assignment_list: assignment_list ',' assignment_list_element
  300                | assignment_list_element

  301 assignment_list_element: cvar

  302 @51: /* empty */

  303 assignment_list_element: T_LIST '(' @51 assignment_list ')'
  304                        | /* empty */

  305 array_pair_list: /* empty */
  306                | non_empty_array_pair_list possible_comma

  307 non_empty_array_pair_list: non_empty_array_pair_list ',' expr T_DOUBLE_ARROW expr
  308                          | non_empty_array_pair_list ',' expr
  309                          | expr T_DOUBLE_ARROW expr
  310                          | expr
  311                          | non_empty_array_pair_list ',' expr T_DOUBLE_ARROW '&' w_cvar
  312                          | non_empty_array_pair_list ',' '&' w_cvar
  313                          | expr T_DOUBLE_ARROW '&' w_cvar
  314                          | '&' w_cvar

  315 encaps_list: encaps_list encaps_var
  316            | encaps_list T_STRING
  317            | encaps_list T_NUM_STRING
  318            | encaps_list T_ENCAPSED_AND_WHITESPACE
  319            | encaps_list T_CHARACTER
  320            | encaps_list T_BAD_CHARACTER
  321            | encaps_list '['
  322            | encaps_list ']'
  323            | encaps_list '{'
  324            | encaps_list '}'
  325            | encaps_list T_OBJECT_OPERATOR
  326            | /* empty */

  327 encaps_var: T_VARIABLE

  328 @52: /* empty */

  329 encaps_var: T_VARIABLE '[' @52 encaps_var_offset ']'
  330           | T_VARIABLE T_OBJECT_OPERATOR T_STRING
  331           | T_DOLLAR_OPEN_CURLY_BRACES expr '}'
  332           | T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '[' expr ']' '}'
  333           | T_CURLY_OPEN cvar '}'

  334 encaps_var_offset: T_STRING
  335                  | T_NUM_STRING
  336                  | T_VARIABLE

  337 internal_functions_in_yacc: T_ISSET '(' isset_variables ')'
  338                           | T_EMPTY '(' cvar ')'
  339                           | T_INCLUDE expr
  340                           | T_INCLUDE_ONCE expr
  341                           | T_EVAL '(' expr ')'
  342                           | T_REQUIRE expr
  343                           | T_REQUIRE_ONCE expr

  344 isset_variables: cvar

  345 @53: /* empty */

  346 isset_variables: isset_variables ',' @53 cvar


Terminals, with rules where they appear

$end (0) 0
'!' (33) 200
'"' (34) 258
'$' (36) 125 126 283 297 298
'%' (37) 195
'&' (38) 107 111 118 121 141 157 158 160 188 311 312 313 314
''' (39) 259
'(' (40) 16 19 22 25 29 31 45 48 51 53 59 63 66 96 99 136 139 155 210
    227 231 233 235 239 240 242 254 303 337 338 341
')' (41) 16 19 22 25 29 31 45 48 51 53 59 63 66 96 99 136 139 155 210
    227 231 233 235 239 240 242 254 303 337 338 341
'*' (42) 193
'+' (43) 191 198 252
',' (44) 56 80 110 111 112 113 119 120 121 122 127 128 142 143 147
    152 264 265 266 299 307 308 311 312 346
'-' (45) 192 199 253
'.' (46) 190
'/' (47) 194
':' (58) 19 74 76 78 83 84 90 93 99 103 213
';' (59) 19 25 29 32 33 34 35 36 37 38 39 40 41 43 44 45 54 66 74 76
    78 82 83 84 91 93 133 139
'<' (60) 206
'=' (61) 79 80 109 113 128 130 143 145 155 156 157 158 160
'>' (62) 208
'?' (63) 213
'@' (64) 225
'[' (91) 279 292 321 329 332
']' (93) 279 292 322 329 332
'^' (94) 189
'`' (96) 228
'{' (123) 13 63 68 70 81 82 126 136 280 283 293 296 323
'|' (124) 187
'}' (125) 13 63 68 70 81 82 126 136 280 283 293 296 324 331 332 333
'~' (126) 201
error (256)
T_REQUIRE_ONCE (258) 343
T_REQUIRE (259) 342
T_EVAL (260) 341
T_INCLUDE_ONCE (261) 340
T_INCLUDE (262) 339
T_LOGICAL_OR (263) 183
T_LOGICAL_XOR (264) 186
T_LOGICAL_AND (265) 185
T_PRINT (266) 229
T_SR_EQUAL (267) 173
T_SL_EQUAL (268) 172
T_XOR_EQUAL (269) 171
T_OR_EQUAL (270) 170
T_AND_EQUAL (271) 169
T_MOD_EQUAL (272) 168
T_CONCAT_EQUAL (273) 167
T_DIV_EQUAL (274) 166
T_MUL_EQUAL (275) 165
T_MINUS_EQUAL (276) 164
T_PLUS_EQUAL (277) 163
T_BOOLEAN_OR (278) 179
T_BOOLEAN_AND (279) 181
T_IS_NOT_IDENTICAL (280) 203
T_IS_IDENTICAL (281) 202
T_IS_NOT_EQUAL (282) 205
T_IS_EQUAL (283) 204
T_IS_GREATER_OR_EQUAL (284) 209
T_IS_SMALLER_OR_EQUAL (285) 207
T_SR (286) 197
T_SL (287) 196
T_UNSET_CAST (288) 222
T_BOOL_CAST (289) 221
T_OBJECT_CAST (290) 220
T_ARRAY_CAST (291) 219
T_STRING_CAST (292) 218
T_DOUBLE_CAST (293) 217
T_INT_CAST (294) 216
T_DEC (295) 176 177
T_INC (296) 174 175
T_NEW (297) 160 162
T_EXIT (298) 223
T_IF (299) 16 19
T_ELSEIF (300) 96 99
T_ELSE (301) 101 103
T_ENDIF (302) 19
T_LNUMBER (303) 243
T_DNUMBER (304) 244
T_STRING (305) 63 66 68 70 79 80 136 139 231 235 236 251 255 295 316
    330 334
T_STRING_VARNAME (306) 256 332
T_VARIABLE (307) 106 107 108 109 110 111 112 113 124 127 128 129 130
    142 143 144 145 282 327 329 330 336
T_NUM_STRING (308) 317 335
T_INLINE_HTML (309) 42
T_CHARACTER (310) 319
T_BAD_CHARACTER (311) 320
T_ENCAPSED_AND_WHITESPACE (312) 318
T_CONSTANT_ENCAPSED_STRING (313) 58 59 245
T_ECHO (314) 41
T_DO (315) 25
T_WHILE (316) 22 25
T_ENDWHILE (317) 93
T_FOR (318) 29
T_ENDFOR (319) 74
T_FOREACH (320) 48 51
T_ENDFOREACH (321) 76
T_DECLARE (322) 53
T_ENDDECLARE (323) 78
T_AS (324) 48 51
T_SWITCH (325) 31
T_ENDSWITCH (326) 83 84
T_CASE (327) 87
T_DEFAULT (328) 89
T_BREAK (329) 32 33
T_CONTINUE (330) 34 35
T_OLD_FUNCTION (331) 66 139
T_FUNCTION (332) 63 136
T_CONST (333) 108 112
T_RETURN (334) 36 37 38
T_USE (335) 44
T_GLOBAL (336) 39
T_STATIC (337) 40
T_VAR (338) 133
T_UNSET (339) 45
T_ISSET (340) 337
T_EMPTY (341) 338
T_CLASS (342) 68 70
T_EXTENDS (343) 70
T_OBJECT_OPERATOR (344) 276 288 325 330
T_DOUBLE_ARROW (345) 72 265 267 307 309 311 313
T_LIST (346) 155 303
T_ARRAY (347) 227 254
T_CLASS_C (348) 248
T_FUNC_C (349) 249
T_LINE (350) 246
T_FILE (351) 247
T_COMMENT (352)
T_ML_COMMENT (353)
T_OPEN_TAG (354)
T_OPEN_TAG_WITH_ECHO (355)
T_CLOSE_TAG (356)
T_WHITESPACE (357)
T_START_HEREDOC (358) 260
T_END_HEREDOC (359) 260
T_DOLLAR_OPEN_CURLY_BRACES (360) 331 332
T_CURLY_OPEN (361) 333
T_PAAMAYIM_NEKUDOTAYIM (362) 235


Nonterminals, with rules where they appear

$accept (137)
    on left: 0
start (138)
    on left: 1, on right: 0
top_statement_list (139)
    on left: 3 4, on right: 1 3
@1 (140)
    on left: 2, on right: 3
top_statement (141)
    on left: 5 6, on right: 3
inner_statement_list (142)
    on left: 8 9, on right: 8 13 19 63 66 74 76 78 87 89 93 99 103
    136 139
@2 (143)
    on left: 7, on right: 8
inner_statement (144)
    on left: 10 11, on right: 8
statement (145)
    on left: 12, on right: 5 10 16 25 73 75 77 92 96 101
unticked_statement (146)
    on left: 13 16 19 22 25 29 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 48 51 53 54, on right: 12
@3 (147)
    on left: 14, on right: 16
@4 (148)
    on left: 15, on right: 16
@5 (149)
    on left: 17, on right: 19
@6 (150)
    on left: 18, on right: 19
@7 (151)
    on left: 20, on right: 22
@8 (152)
    on left: 21, on right: 22
@9 (153)
    on left: 23, on right: 25
@10 (154)
    on left: 24, on right: 25
@11 (155)
    on left: 26, on right: 29
@12 (156)
    on left: 27, on right: 29
@13 (157)
    on left: 28, on right: 29
@14 (158)
    on left: 30, on right: 31
@15 (159)
    on left: 46, on right: 48
@16 (160)
    on left: 47, on right: 48
@17 (161)
    on left: 49, on right: 51
@18 (162)
    on left: 50, on right: 51
@19 (163)
    on left: 52, on right: 53
unset_variables (164)
    on left: 55 56, on right: 45 56
unset_variable (165)
    on left: 57, on right: 55 56
use_filename (166)
    on left: 58 59, on right: 44
declaration_statement (167)
    on left: 60, on right: 6 11
unticked_declaration_statement (168)
    on left: 63 66 68 70, on right: 60
@20 (169)
    on left: 61, on right: 63
@21 (170)
    on left: 62, on right: 63
@22 (171)
    on left: 64, on right: 66
@23 (172)
    on left: 65, on right: 66
@24 (173)
    on left: 67, on right: 68
@25 (174)
    on left: 69, on right: 70
foreach_optional_arg (175)
    on left: 71 72, on right: 48 51
for_statement (176)
    on left: 73 74, on right: 29
foreach_statement (177)
    on left: 75 76, on right: 48 51
declare_statement (178)
    on left: 77 78, on right: 53
declare_list (179)
    on left: 79 80, on right: 53 80
switch_case_list (180)
    on left: 81 82 83 84, on right: 31
case_list (181)
    on left: 85 87 89, on right: 81 82 83 84 87 89
@26 (182)
    on left: 86, on right: 87
@27 (183)
    on left: 88, on right: 89
case_separator (184)
    on left: 90 91, on right: 87 89
while_statement (185)
    on left: 92 93, on right: 22
elseif_list (186)
    on left: 94 96, on right: 16 96
@28 (187)
    on left: 95, on right: 96
new_elseif_list (188)
    on left: 97 99, on right: 19 99
@29 (189)
    on left: 98, on right: 99
else_single (190)
    on left: 100 101, on right: 16
new_else_single (191)
    on left: 102 103, on right: 19
parameter_list (192)
    on left: 104 105, on right: 63 66 136 139
non_empty_parameter_list (193)
    on left: 106 107 108 109 110 111 112 113, on right: 104 110 111
    112 113
function_call_parameter_list (194)
    on left: 114 115, on right: 231 233 235 242
non_empty_function_call_parameter_list (195)
    on left: 116 117 118 119 120 121, on right: 114 119 120 121
global_var_list (196)
    on left: 122 123, on right: 39 122
global_var (197)
    on left: 124 125 126, on right: 122 123
static_var_list (198)
    on left: 127 128 129 130, on right: 40 127 128
class_statement_list (199)
    on left: 131 132, on right: 68 70 131
class_statement (200)
    on left: 133 136 139, on right: 131
@30 (201)
    on left: 134, on right: 136
@31 (202)
    on left: 135, on right: 136
@32 (203)
    on left: 137, on right: 139
@33 (204)
    on left: 138, on right: 139
is_reference (205)
    on left: 140 141, on right: 63 66 136 139
class_variable_decleration (206)
    on left: 142 143 144 145, on right: 133 142 143
echo_expr_list (207)
    on left: 146 147 148, on right: 41 147
for_expr (208)
    on left: 149 150, on right: 29
non_empty_for_expr (209)
    on left: 152 153, on right: 150 152
@34 (210)
    on left: 151, on right: 152
expr_without_variable (211)
    on left: 155 156 157 158 160 162 163 164 165 166 167 168 169 170
    171 172 173 174 175 176 177 179 181 183 185 186 187 188 189 190
    191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206
    207 208 209 210 213 214 215 216 217 218 219 220 221 222 223 225
    226 227 228 229, on right: 37 51 116 119 270
@35 (212)
    on left: 154, on right: 155
@36 (213)
    on left: 159, on right: 160
@37 (214)
    on left: 161, on right: 162
@38 (215)
    on left: 178, on right: 179
@39 (216)
    on left: 180, on right: 181
@40 (217)
    on left: 182, on right: 183
@41 (218)
    on left: 184, on right: 185
@42 (219)
    on left: 211, on right: 213
@43 (220)
    on left: 212, on right: 213
@44 (221)
    on left: 224, on right: 225
function_call (222)
    on left: 231 233 235, on right: 158 214
@45 (223)
    on left: 230, on right: 231
@46 (224)
    on left: 232, on right: 233
@47 (225)
    on left: 234, on right: 235
static_or_variable_string (226)
    on left: 236 237, on right: 160 162 235
exit_expr (227)
    on left: 238 239 240, on right: 223
ctor_arguments (228)
    on left: 241 242, on right: 160 162
common_scalar (229)
    on left: 243 244 245 246 247 248 249, on right: 250 257
static_scalar (230)
    on left: 250 251 252 253 254, on right: 79 80 109 113 128 130 143
    145 252 253 265 266 267 268
scalar (231)
    on left: 255 256 257 258 259 260, on right: 226
static_array_pair_list (232)
    on left: 261 262, on right: 254
possible_comma (233)
    on left: 263 264, on right: 262 306
non_empty_static_array_pair_list (234)
    on left: 265 266 267 268, on right: 262 265 266
expr (235)
    on left: 269 270, on right: 16 19 22 25 31 33 35 43 87 96 99 126
    147 148 152 153 155 156 163 164 165 166 167 168 169 170 171 172
    173 179 181 183 185 186 187 188 189 190 191 192 193 194 195 196
    197 198 199 200 201 202 203 204 205 206 207 208 209 210 213 216
    217 218 219 220 221 222 225 229 240 280 283 285 293 296 307 308
    309 310 311 313 331 332 339 340 341 342 343
r_cvar (236)
    on left: 271, on right: 125 237 269
w_cvar (237)
    on left: 272, on right: 48 51 72 118 121 157 311 312 313 314
rw_cvar (238)
    on left: 273, on right: 174 175 176 177
cvar (239)
    on left: 274 276, on right: 38 57 117 120 156 157 158 160 163 164
    165 166 167 168 169 170 171 172 173 233 271 272 273 301 333 338
    344 346
@48 (240)
    on left: 275, on right: 276
cvar_without_objects (241)
    on left: 277 278, on right: 274 276 291
reference_variable (242)
    on left: 279 280 281, on right: 277 278 279 280
compound_variable (243)
    on left: 282 283, on right: 281
dim_offset (244)
    on left: 284 285, on right: 279 292
ref_list (245)
    on left: 286 288, on right: 276 288
@49 (246)
    on left: 287, on right: 288
object_property (247)
    on left: 289 291, on right: 286 288
@50 (248)
    on left: 290, on right: 291
object_dim_list (249)
    on left: 292 293 294, on right: 289 292 293
variable_name (250)
    on left: 295 296, on right: 294
simple_indirect_reference (251)
    on left: 297 298, on right: 278 298
assignment_list (252)
    on left: 299 300, on right: 155 299 303
assignment_list_element (253)
    on left: 301 303 304, on right: 299 300
@51 (254)
    on left: 302, on right: 303
array_pair_list (255)
    on left: 305 306, on right: 227
non_empty_array_pair_list (256)
    on left: 307 308 309 310 311 312 313 314, on right: 306 307 308
    311 312
encaps_list (257)
    on left: 315 316 317 318 319 320 321 322 323 324 325 326,
    on right: 228 258 259 260 315 316 317 318 319 320 321 322 323 324
    325
encaps_var (258)
    on left: 327 329 330 331 332 333, on right: 315
@52 (259)
    on left: 328, on right: 329
encaps_var_offset (260)
    on left: 334 335 336, on right: 329
internal_functions_in_yacc (261)
    on left: 337 338 339 340 341 342 343, on right: 215
isset_variables (262)
    on left: 344 346, on right: 337 346
@53 (263)
    on left: 345, on right: 346


state 0

    0 $accept: . start $end

    $default  reduce using rule 4 (top_statement_list)

    start               go to state 1
    top_statement_list  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: top_statement_list .
    3 top_statement_list: top_statement_list . @1 top_statement

    $end      reduce using rule 1 (start)
    $default  reduce using rule 2 (@1)

    @1  go to state 4


state 3

    0 $accept: start $end .

    $default  accept


state 4

    3 top_statement_list: top_statement_list @1 . top_statement

    T_REQUIRE_ONCE              shift, and go to state 5
    T_REQUIRE                   shift, and go to state 6
    T_EVAL                      shift, and go to state 7
    T_INCLUDE_ONCE              shift, and go to state 8
    T_INCLUDE                   shift, and go to state 9
    T_PRINT                     shift, and go to state 10
    '+'                         shift, and go to state 11
    '-'                         shift, and go to state 12
    '!'                         shift, and go to state 13
    '~'                         shift, and go to state 14
    '@'                         shift, and go to state 15
    T_UNSET_CAST                shift, and go to state 16
    T_BOOL_CAST                 shift, and go to state 17
    T_OBJECT_CAST               shift, and go to state 18
    T_ARRAY_CAST                shift, and go to state 19
    T_STRING_CAST               shift, and go to state 20
    T_DOUBLE_CAST               shift, and go to state 21
    T_INT_CAST                  shift, and go to state 22
    T_DEC                       shift, and go to state 23
    T_INC                       shift, and go to state 24
    T_NEW                       shift, and go to state 25
    T_EXIT                      shift, and go to state 26
    T_IF                        shift, and go to state 27
    T_LNUMBER                   shift, and go to state 28
    T_DNUMBER                   shift, and go to state 29
    T_STRING                    shift, and go to state 30
    T_STRING_VARNAME            shift, and go to state 31
    T_VARIABLE                  shift, and go to state 32
    T_INLINE_HTML               shift, and go to state 33
    T_CONSTANT_ENCAPSED_STRING  shift, and go to state 34
    T_ECHO                      shift, and go to state 35
    T_DO                        shift, and go to state 36
    T_WHILE                     shift, and go to state 37
    T_FOR                       shift, and go to state 38
    T_FOREACH                   shift, and go to state 39
    T_DECLARE                   shift, and go to state 40
    T_SWITCH                    shift, and go to state 41
    T_BREAK                     shift, and go to state 42
    T_CONTINUE                  shift, and go to state 43
    T_OLD_FUNCTION              shift, and go to state 44
    T_FUNCTION                  shift, and go to state 45
    T_RETURN                    shift, and go to state 46
    T_USE                       shift, and go to state 47
    T_GLOBAL                    shift, and go to state 48
    T_STATIC                    shift, and go to state 49
    T_UNSET                     shift, and go to state 50
    T_ISSET                     shift, and go to state 51
    T_EMPTY                     shift, and go to state 52
    T_CLASS                     shift, and go to state 53
    T_LIST                      shift, and go to state 54
    T_ARRAY                     shift, and go to state 55
    T_CLASS_C                   shift, and go to state 56
    T_FUNC_C                    shift, and go to state 57
    T_LINE                      shift, and go to state 58
    T_FILE                      shift, and go to state 59
    T_START_HEREDOC             shift, and go to state 60
    '{'                         shift, and go to state 61
    '('                         shift, and go to state 62
    ';'                         shift, and go to state 63
    '$'                         shift, and go to state 64
    '`'                         shift, and go to state 65
    '"'                         shift, and go to state 66
    '''                         shift, and go to state 67

    top_statement                   go to state 68
    statement                       go to state 69
    unticked_statement              go to state 70
    declaration_statement           go to state 71
    unticked_declaration_statement  go to state 72
    expr_without_variable           go to state 73
    function_call                   go to state 74
    common_scalar                   go to state 75
    scalar                          go to state 76
    expr                            go to state 77
    r_cvar                          go to state 78
    rw_cvar                         go to state 79
    cvar                            go to state 80
    cvar_without_objects            go to state 81
    reference_variable              go to state 82
    compound_variable               go to state 83
    simple_indirect_reference       go to state 84
    internal_functions_in_yacc      go to state 85


state 5

  343 internal_functions_in_yacc: T_REQUIRE_ONCE . expr
